Add drf38, py37 compatibility test cases

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist =
        {py27,py34,py35}-django18-drf{31,32,33,34},
        {py27,py34,py35}-django111-drf{34,35,36,37},
        {py35}-django20-drf37,
+       {py37}-django111-drf38,       
 
 [testenv]
 commands = ./runtests.py --fast {posargs} --coverage -rw
@@ -25,6 +26,7 @@ deps =
         drf35: djangorestframework==3.5.0
         drf36: djangorestframework==3.6.2
         drf37: djangorestframework==3.7.7
+        drf38: djangorestframework==3.8.2
         -rrequirements.test.txt
 
 [testenv:py27-lint]
