--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ addopts=--tb=short
 envlist =
        py27-lint,
        {py27,py34,py35}-django18-drf{31,32,33,34},
-       {py27,py34,py35}-django111-drf{34,35,36,37},
+       {py27,py34,py35,py36,py37}-django111-drf{34,35,36,37,38},
        {py35}-django20-drf37,
 
 [testenv]
@@ -16,7 +16,7 @@ deps =
         django18: Django==1.8.14
         django19: Django==1.9.9
         django110: Django==1.10.0
-        django111: Django==1.11.2
+        django111: Django==1.11.16
         django20: Django==2.0.1
         drf31: djangorestframework==3.1.0
         drf32: djangorestframework==3.2.0
@@ -25,6 +25,7 @@ deps =
         drf35: djangorestframework==3.5.0
         drf36: djangorestframework==3.6.2
         drf37: djangorestframework==3.7.7
+        drf38: djangorestframework==3.8.2
         -rrequirements.test.txt
 
 [testenv:py27-lint]
@@ -35,6 +36,6 @@ deps =
 [testenv:py27-drf37-benchmarks]
 commands = ./runtests.py --benchmarks
 deps =
-        Django==1.11.2
+        Django==1.11.16
         djangorestframework==3.7.7
         -rrequirements.benchmark.txt
