remov py3.7 from django1.11 in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ addopts=--tb=short
 envlist =
        py27-lint,
        {py27,py34,py35}-django18-drf{31,32,33,34},
-       {py27,py34,py35,py36,py37}-django111-drf{34,35,36,37,38},
+       {py27,py34,py35,py36}-django111-drf{34,35,36,37,38},
        {py35}-django20-drf37,
 
 [testenv]
